emailing works with formspree

--- a/no-touchie.html
+++ b/no-touchie.html
@@ -281,7 +281,7 @@
                     <li>Preferential pricing for any subsequent purchase</li>
                 </ul>
                 <form id="design-partner-form" class="design-partner-application-boxes"
-                action="https://formspree.io/f/abcdwxyz" method="POST">
+                action="https://formspree.io/f/xpwygwez" method="POST">
 
                 <div class="field">
                     <!-- <label for="dp-name">Your name</label> -->
