moved media queries into separate css for debugging

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renubu</title>
     <link rel="stylesheet" href="no-touchie.css">
+    <link rel="stylesheet" href="responsiveness.css">
 </head>
 
 <body>
