tablets: intro completed

--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
 
                 </div>
 
+                <div class="intro-list-other-screens">
+                    <ul class="fancy-list">
+                        <li>Save two days / week of renewal busywork</li>
+                        <li>Optimize pricing with data-driven recommendations</li>
+                        <li>Surface hidden expansion opportunities</li>
+                    </ul>
+                </div>
+
                 <div class="intro-buttons">
                     <button class="chat-btn"
                         onclick="document.getElementById('calendly-container').scrollIntoView({ behavior: 'smooth' });">
@@ -72,6 +80,12 @@
 
             <div class="intro-right">
                 <div class="right-card">
+                    <img src="assets/first-screenshot.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="intro-right-other-screens">
+                <div class="right-card right-card-other">
                     <img src="assets/first-screenshot.jpg" alt="">
                 </div>
             </div>
